--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.525.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-csv": "^2.2.2",
+    "react-date-range": "^2.0.1",
     "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
