--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,10 +14,10 @@ ACCESS_TOKEN_LIFETIME=60
 REFRESH_TOKEN_LIFETIME=1440
 
 # CORS settings (comma-separated)
-CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:6371,http://localhost:5173,https://crm.primearabiagroup.com
+CORS_ALLOWED_ORIGINS=http://localhost:5178,https://crm.primearabiagroup.com
 
 # CSRF Trusted Origins (comma-separated, for Django admin)
-CSRF_TRUSTED_ORIGINS=http://localhost:6370,http://localhost:6371,http://localhost:3000,https://backend.primearabiagroup.com,https://crm.primearabiagroup.com
+CSRF_TRUSTED_ORIGINS=http://localhost:5178,https://backend.primearabiagroup.com,https://crm.primearabiagroup.com
 
 # Production URLs
 FRONTEND_URL=https://crm.primearabiagroup.com
