--- a/dashboard/.env
+++ b/dashboard/.env
@@ -1,6 +1,6 @@
 # Development
-VITE_API_URL=http://localhost:6370
-VITE_API_BASE_URL=http://localhost:6370/api
+VITE_API_URL=https://crm.primearabiagroup.com
+VITE_API_BASE_URL=https://crm.primearabiagroup.com/api
 
 # Production (uncomment when deploying)
 # VITE_API_URL=https://backend.primearabiagroup.com
