--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -17,13 +17,15 @@
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.525.0",
     "prop-types": "^15.8.1",
-    "react": "^19.1.0",
+    "quill": "^2.0.3",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-csv": "^2.2.2",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^8.7.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.7.1",
     "react-to-print": "^3.1.1",
     "react-toastify": "^11.0.5",
