--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -29,7 +29,8 @@
     "react-router-dom": "^7.7.1",
     "react-to-print": "^3.1.1",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
