--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.525.0",
     "prop-types": "^15.8.1",
