--- a/dashboard/.env
+++ b/dashboard/.env
@@ -1,6 +1,6 @@
 # Development
-VITE_API_URL=http://localhost:6370
-VITE_API_BASE_URL=http://localhost:6370/api
+VITE_API_URL=http://127.0.0.1:8000/
+VITE_API_BASE_URL=http://127.0.0.1:8000/api
 
 # Production (uncomment when deploying)
 # VITE_API_URL=https://backend.primearabiagroup.com
