--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -24,4 +24,4 @@ COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
 EXPOSE 8000
-ENTRYPOINT ["sh", "/app/entrypoint.sh"]
+ENTRYPOINT ["/entrypoint.sh"]
