update doc file v2

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -59,26 +59,13 @@ services:
     restart: always
     env_file:
       - ./backend/.env
-    environment:
-      DB_HOST: mysql
-      DB_PORT: 3306
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-      DJANGO_SETTINGS_MODULE: backend.settings
-      CELERY_BROKER_URL: redis://redis:6379/0
-      CELERY_RESULT_BACKEND: redis://redis:6379/1
-      CELERY_WORKER_CONCURRENCY: 4
     depends_on:
       - backend
       - redis
     volumes:
       - ./backend:/app
       - media_data:/app/media
-    command: >
-      sh -c "
-      sleep 15
-      celery -A backend worker --loglevel=info --concurrency=4
-      "
+    command: ["sh", "-c", "sleep 15 && celery -A backend worker --loglevel=info --concurrency=4"]
     networks:
       - prime_network
 
@@ -88,25 +75,13 @@ services:
     restart: always
     env_file:
       - ./backend/.env
-    environment:
-      DB_HOST: mysql
-      DB_PORT: 3306
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-      DJANGO_SETTINGS_MODULE: backend.settings
-      CELERY_BROKER_URL: redis://redis:6379/0
-      CELERY_RESULT_BACKEND: redis://redis:6379/1
     depends_on:
       - backend
       - redis
     volumes:
       - ./backend:/app
       - media_data:/app/media
-    command: >
-      sh -c "
-      sleep 20
-      celery -A backend beat --loglevel=info --scheduler django_celery_beat.schedulers:DatabaseScheduler
-      "
+    command: ["sh", "-c", "sleep 20 && celery -A backend beat --loglevel=info --scheduler django_celery_beat.schedulers:DatabaseScheduler"]
     networks:
       - prime_network
 
