--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -24,4 +24,5 @@ COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
 EXPOSE 8000
+# ENTRYPOINT ["/entrypoint.sh"]
 CMD ["sh", "/entrypoint.sh"]
