--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,15 +38,15 @@ services:
     environment:
       DB_HOST: mysql
       DB_PORT: 3306
-      REDIS_HOST: redis
+      REDIS_HOST: prime_redis
       REDIS_PORT: 6379
+      CELERY_BROKER_URL: redis://prime_redis:6379/0
+      CELERY_RESULT_BACKEND: redis://prime_redis:6379/1
       DJANGO_SETTINGS_MODULE: backend.settings
-      CELERY_BROKER_URL: redis://redis:6379/0
-      CELERY_RESULT_BACKEND: redis://redis:6379/1
     depends_on:
       - mysql
     ports:
-      - "6370:8000"
+      - "6370:8000" 
     volumes:
       - ./backend:/app
       - media_data:/app/media
@@ -59,13 +59,18 @@ services:
     restart: always
     env_file:
       - ./backend/.env
+    environment:
+      REDIS_HOST: prime_redis
+      REDIS_PORT: 6379
+      CELERY_BROKER_URL: redis://prime_redis:6379/0
+      CELERY_RESULT_BACKEND: redis://prime_redis:6379/1
     depends_on:
       - backend
       - redis
     volumes:
       - ./backend:/app
       - media_data:/app/media
-    command: ["sh", "-c", "sleep 15 && celery -A backend.celery worker --loglevel=info --concurrency=4"]
+    command: ["sh", "-c", "sleep 15 && celery -A backend worker --loglevel=info --concurrency=4"]
     networks:
       - prime_network
 
@@ -75,13 +80,18 @@ services:
     restart: always
     env_file:
       - ./backend/.env
+    environment:
+      REDIS_HOST: prime_redis
+      REDIS_PORT: 6379
+      CELERY_BROKER_URL: redis://prime_redis:6379/0
+      CELERY_RESULT_BACKEND: redis://prime_redis:6379/1
     depends_on:
       - backend
       - redis
     volumes:
       - ./backend:/app
       - media_data:/app/media
-    command: ["sh", "-c", "sleep 20 && celery -A backend.celery beat --loglevel=info --scheduler django_celery_beat.schedulers:DatabaseScheduler"]
+    command: ["sh", "-c", "sleep 20 && celery -A backend beat --loglevel=info --scheduler django_celery_beat.schedulers:DatabaseScheduler"]
     networks:
       - prime_network
 
