--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -43,6 +43,11 @@ services:
       CELERY_BROKER_URL: redis://prime_redis:6379/0
       CELERY_RESULT_BACKEND: redis://prime_redis:6379/1
       DJANGO_SETTINGS_MODULE: backend.settings
+      EMAIL_HOST: smtp.gmail.com
+      EMAIL_PORT: 587
+      EMAIL_USE_TLS: True
+      EMAIL_HOST_USER: ${EMAIL_HOST_USER}
+      EMAIL_HOST_PASSWORD: ${EMAIL_HOST_PASSWORD}
     depends_on:
       - mysql
     ports:
